Analise exploratória finalizada, iniciado modelos de ml de regressão

--- a/Regressao_Linear/preco_imoveis_utilizando_regressão_linear.ipynb
+++ b/Regressao_Linear/preco_imoveis_utilizando_regressão_linear.ipynb
@@ -7854,7 +7854,14 @@
     "\n",
     "- O **backward selection** inicia com todas as variáveis possíveis no modelo e, iterativamente, remove a variável que menos contribui para o modelo, novamente baseando-se em critérios como o p-valor ou o impacto no R² ajustado.\n",
     "\n",
-    "- O **stepwise selection** é uma combinação dos dois métodos anteriores, onde as variáveis podem ser adicionadas ou removidas em cada passo, dependendo de sua contribuição para o melhoramento do modelo."
+    "- O **stepwise selection** é uma combinação dos dois métodos anteriores, onde as variáveis podem ser adicionadas ou removidas em cada passo, dependendo de sua contribuição para o melhoramento do modelo.\n",
+    "\n",
+    "**O que é o p-value?**\n",
+    "\n",
+    "O p-value (valor-p) indica a probabilidade de que o coeficiente de uma variável seja estatisticamente insignificante (ou seja, que seu verdadeiro impacto sobre a variável alvl seja zero).\n",
+    "\n",
+    "- **Se p-value < 0.05 (5%)**: A variável tem um impacto **estatisticamente significativo** na variável alvo (pode ser incluída no modelo).\n",
+    "- **Se p-value > 0.05 (5%)**: A variável **não tem um impacto estatisticamente significativo** (não temos evidência forte de que ela influencia a variável alvo)."
    ]
   },
   {
