Comentarios sobre a não linearidade do problema

--- a/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
+++ b/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
@@ -447,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x200330f2cc0>"
+       "<seaborn.axisgrid.PairGrid at 0x1f2d23eb590>"
       ]
      },
      "execution_count": 9,
@@ -675,7 +675,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x20033a1c350>"
+       "<seaborn.axisgrid.PairGrid at 0x1f2d2a10410>"
       ]
      },
      "execution_count": 14,
@@ -935,7 +935,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.968\n",
       "Method:                 Least Squares   F-statistic:                     4732.\n",
       "Date:                Mon, 24 Feb 2025   Prob (F-statistic):          1.59e-117\n",
-      "Time:                        10:37:00   Log-Likelihood:                -1692.5\n",
+      "Time:                        16:18:25   Log-Likelihood:                -1692.5\n",
       "No. Observations:                 156   AIC:                             3389.\n",
       "Df Residuals:                     154   BIC:                             3395.\n",
       "Df Model:                           1                                         \n",
@@ -989,7 +989,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.987\n",
       "Method:                 Least Squares   F-statistic:                     4030.\n",
       "Date:                Mon, 24 Feb 2025   Prob (F-statistic):          1.36e-144\n",
-      "Time:                        10:37:00   Log-Likelihood:                -1619.8\n",
+      "Time:                        16:18:25   Log-Likelihood:                -1619.8\n",
       "No. Observations:                 156   AIC:                             3248.\n",
       "Df Residuals:                     152   BIC:                             3260.\n",
       "Df Model:                           3                                         \n",
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "4          0.160                0.0             0.0                 0.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.988\n",
       "Method:                 Least Squares   F-statistic:                     1818.\n",
       "Date:                Mon, 24 Feb 2025   Prob (F-statistic):          4.35e-140\n",
-      "Time:                        11:10:09   Log-Likelihood:                -1613.8\n",
+      "Time:                        16:18:25   Log-Likelihood:                -1613.8\n",
       "No. Observations:                 156   AIC:                             3244.\n",
       "Df Residuals:                     148   BIC:                             3268.\n",
       "Df Model:                           7                                         \n",
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
        "4                 0.0           0.264247  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.988\n",
       "Method:                 Least Squares   F-statistic:                     2120.\n",
       "Date:                Mon, 24 Feb 2025   Prob (F-statistic):          1.58e-141\n",
-      "Time:                        11:17:15   Log-Likelihood:                -1614.4\n",
+      "Time:                        16:18:25   Log-Likelihood:                -1614.4\n",
       "No. Observations:                 156   AIC:                             3243.\n",
       "Df Residuals:                     149   BIC:                             3264.\n",
       "Df Model:                           6                                         \n",
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,8 +1572,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No gráfico de resíduos abaixo, assim como no anterior, é um forte indício de **heterocedasticidade**, pelo fato de que os resíduos do modelo não estão distribuídos de forma aleatória, mas sim seguem um padrão específico. Isso pode indicar que **o modelo linear não está captando corretamente a estrutura dos dados**. Portanto, seria interessante testar modelos **não lineares** para este contexto, como uma Floresta Aleatória, XGBoost ou Redes Neurais."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1589,7 @@
        "Text(0, 0.5, 'Resíduos')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
