--- a/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
+++ b/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
@@ -406,7 +406,9 @@
    "source": [
     "Boxplots para visualizar a distribuição dos valores das variáveis e verificar a presença de outliers.\n",
     "\n",
-    "É possível visualizar outliers em temperatura e rendimento, porém, por enquanto iremos manter esses dados."
+    "É possível visualizar outliers em temperatura e rendimento, porém, por enquanto iremos manter esses dados.\n",
+    "\n",
+    "Porém, temos muitos outliers na coluna *Yield*, algo que pode **ocasionar problemas na generalização do modelo**."
    ]
   },
   {
@@ -1775,7 +1777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
